--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 Issues:
 
 1. The navigation bar will not open on iPhone devices due to the 'hover' event not tracking.
-2. The navigation bar is not sufficiently compact for mobile devices. 
+2. The navigation bar is not sufficiently compact for mobile devices.
+3. Make navigation modal.
